--- a/data/firebug-theme/toolbox.css
+++ b/data/firebug-theme/toolbox.css
@@ -35,14 +35,16 @@
 }
 
 .theme-firebug #toolbox-tabs .devtools-tab:hover,
-.theme-firebug #toolbox-sidetabs .devtools-tab:hover {
+.theme-firebug #toolbox-sidetabs .devtools-tab:hover,
+.theme-firebug #toolbox-tab-options:hover {
     border: 1px solid #C8C8C8;
     border-bottom: 1px solid transparent;
     background-color: transparent;
 }
 
 .theme-firebug #toolbox-tabs .devtools-tab[selected],
-.theme-firebug #toolbox-sidetabs .devtools-tab[selected] {
+.theme-firebug #toolbox-sidetabs .devtools-tab[selected],
+.theme-firebug #toolbox-tab-options[selected] {
     background-color: rgb(247, 251, 254);
     border: 1px solid rgb(170, 188, 207);
     border-bottom: 1px solid rgb(247, 251, 254);
